# vertigo

./: .gitignore  appintro.tsx  eslint.config.mjs  package-lock.json  package.json
references/: appintro.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/chat/: ChannelSidebar.tsx  ChatArea.tsx  MemberList.tsx  ServerBrowser.tsx  ServerRail.tsx
src/components/intro/: AppIntro.tsx
src/components/ui/: sidebar.tsx
src/data/: mockData.ts
src/stores/: useChatStore.ts
src/types/: chat.ts
